# youtube-summarizer

./: .gitignore  README.md  app_types.py  main.py  output.txt  prompt.py  pyproject.toml  secrets.py
src/: prompt.py  youtube.py
